@@ -31,12 +31,12 @@ THE SOFTWARE.
         <tr>
             <td>Single job</td>
             <td>&nbsp;</td>
-            <td>Lua.vcast_manage.singlejob</td>
+            <td>Lua.vcast.single</td>
         </tr>
         <tr>
             <td>Multi job (main project)</td>
             <td>&nbsp;</td>
-            <td>Lua.vcast_manage.multijob</td>
+            <td>Lua.vcast.multi</td>
         </tr>
         <tr>
             <td>Multi job (sub projects)</td>
